@@ -1,5 +1,9 @@
 2005-11-28  Stephane Voltz <stefdev@modulonet.fr>
 
+	* backend/umax_pp_low.c: ifdef'ed forgottent debug statements
+
+2005-11-28  Stephane Voltz <stefdev@modulonet.fr>
+
 	* backend/umax_pp_low.c: fixed 'blue tint' on scanning area border
 	  by increasing shading coefficient on dark areas
 
